detail photo modified

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<span class="control__title">摄影 · 集：</span>
 					<!--Start a new item--><div class="control__item">
 						<input class="control__radio" type="radio" name="grid-type" value="grid--type-a" id="control-grid-a" checked>
-						<label class="control__label" for="control-grid-a">秋-墙</label>
+						<label class="control__label" for="control-grid-a">光影</label>
 					</div><!--End the item-->
                     <!--Start a new item--><div class="control__item">
 						<input class="control__radio" type="radio" name="grid-type" value="grid--type-b" id="control-grid-b" checked>
